en/v0.5.0/_sources/reference/processors.rst.txt
.. _processors:

=====================
Processors
=====================


Data Processors
---------------

General
~~~~
.. autosummary::
    :toctree: generated/
    
    xpark.dataset.HashDedup


Text
~~~~
.. autosummary::
    :toctree: generated/

    xpark.dataset.MarkdownChunking
    xpark.dataset.TextFuzzyDedup
    xpark.dataset.TextExactSubstringDedup
    xpark.dataset.TextChunking
    xpark.dataset.TextFlaggedWordRatio


Audio
~~~~~
.. autosummary::
    :toctree: generated/

    xpark.dataset.AudioCompute


Image
~~~~~
.. autosummary::
    :toctree: generated/

    xpark.dataset.ImageCompute


Video
~~~~~
.. autosummary::
    :toctree: generated/

    xpark.dataset.VideoCompute


AI Processors
-------------

Text
~~~~
.. autosummary::
    :toctree: generated/

    xpark.dataset.TextEmbedding
    xpark.dataset.TextSummarize
    xpark.dataset.TextMask
    xpark.dataset.TextGenerate
    xpark.dataset.TextClassify
    xpark.dataset.TextFixGrammar
    xpark.dataset.TextSimilarity
    xpark.dataset.TextTranslate
    xpark.dataset.TextSentiment
    xpark.dataset.TextExtract
    xpark.dataset.TextPredicateEval
    xpark.dataset.TextPerplexity
    xpark.dataset.TextLanguageDetector
    xpark.dataset.TextLanguageScore
    xpark.dataset.TextPatternCleaner

Image
~~~~~
.. autosummary::
    :toctree: generated/

    xpark.dataset.ImageNSFWScore
    xpark.dataset.ImageTextSimilarityScore
    xpark.dataset.ImageAestheticScore


Audio
~~~~~
.. autosummary::
    :toctree: generated/

    xpark.dataset.SpeechToText


Time Series
~~~~~~~~~~~
.. autosummary::
    :toctree: generated/

    xpark.dataset.TimeSeriesForecast


Connectors
-------------

VectorDB
~~~~~~~~
.. autosummary::
    :toctree: generated/

    xpark.dataset.connectors.InsertVectorDB
    xpark.dataset.connectors.UpsertVectorDB
    xpark.dataset.connectors.DeleteVectorDB
    xpark.dataset.connectors.SearchVectorDB
